--- a/doc/style/CustomDoxygen.css
+++ b/doc/style/CustomDoxygen.css
@@ -40,6 +40,11 @@ h3 {
     padding-bottom: 5px;
 }
 
+span.future {
+    color: #008000;
+    font-weight: bold;
+}
+
 /* Page titles */
 div.title {
     margin: 2px 2px;
@@ -56,7 +61,7 @@ div.fragment {
 
 /* @c */
 code {
-    background: #f2f2f2;
+    background: #fbfdfd;
     border: 1px solid #c4cfe5;
     border-radius: 5px;
 }
